# hardware_agent

./: README.md  database.sqlite  main.py  pyproject.toml  read_data.py  sample_hardware_data - Sheet1.csv
